style.css
/* ... */
/* latin-ext */
@font-face {
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 300;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/poppins/v24/pxiByp8kv8JHgFVrLDz8Z1JlFc-K.woff2) format('woff2');
  unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF, U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 300;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/poppins/v24/pxiByp8kv8JHgFVrLDz8Z1xlFQ.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}
/* devanagari */
@font-face {
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 500;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/poppins/v24/pxiByp8kv8JHgFVrLGT9Z11lFc-K.woff2) format('woff2');
  unicode-range: U+0900-097F, U+1CD0-1CF9, U+200C-200D, U+20A8, U+20B9, U+20F0, U+25CC, U+A830-A839, U+A8E0-A8FF, U+11B00-11B09;
}
/* latin-ext */
@font-face {
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 500;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/poppins/v24/pxiByp8kv8JHgFVrLGT9Z1JlFc-K.woff2) format('woff2');
  unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF, U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 500;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/poppins/v24/pxiByp8kv8JHgFVrLGT9Z1xlFQ.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}
@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400..700;1,400..700&display=swap');

/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
	~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~OCTANE CUSTOM CSS ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
	~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
  :root {
    --wpadmin-bar-height: 0px;
    --ulg-brand-bar-height: 0px;
    --site-header-height: 72px;

    --global-offset-height: calc(
      var(--ulg-brand-bar-height) +
      var(--site-header-height)
    );

    --global-offset-height-with-admin: calc(
      var(--wpadmin-bar-height) +
      var(--ulg-brand-bar-height) +
      var(--site-header-height)
    );
  }


  h1, h2, h3, h4, h5, h6, a {
    font-family: "Libre Baskerville", serif;
  }

  p {
    font-family: "Poppins";
  }

  #menu-main-nav .nav-link {
    font-family: "Libre Baskerville", serif;
    text-transform: uppercase;
  }

  .btn {
    font-family: "Libre Baskerville", serif !important;
    text-transform: uppercase !important;
  }

	body.admin-bar .the-default-third-nav #mega-menu.fixed-top {
		    top: 78px !important;
	}

	body.admin-bar .the-default-third-nav.on #mega-menu.fixed-top {
		    top: 32px !important;
	}

	#mega-menu {
		    top: 44px !important;
	}

	.the-default-third-nav.on #mega-menu {
		    top: 0 !important;
	}

  a, .nav-link, .nav-tabs .nav-link { color: white; }

	.ulg-gradient-heading
	{
		font-size: 5rem;
		font-weight: 700;
		margin-bottom: 1rem;
		text-transform: lowercase;
		letter-spacing: 0.02em;

		/* Gradient text */
		background: linear-gradient(
			90deg,
			#4D0D13 0%,
			#AF2A24 25%,
			#F25D3B 50%,
			#F89F3C 75%,
			#F7D580 100%
		);
		-webkit-background-clip: text !important;
		background-clip: text !important;
		color: transparent !important;
		text-transform: uppercase;
	}



  body.admin-bar .large-header.large-header-has-slider .sy-box {
    margin: 0 !important;
    height: calc(100vh - var(--global-offset-height-with-admin));
  }

  .large-header.large-header-has-slider .sy-box {
    margin: 0 !important;
    height: calc(100vh - var(--global-offset-height));
  }

  .large-header.large-header-has-slider .sy-pager {
    position: absolute;
    bottom: 10px;
    z-index: 99;
    margin: 0 !important;
  }
  .large-header.large-header-has-slider img { width: 100%; }


	/*~~~~~~~~~~~~~~~~~~~~~
	~~~~~~~~ HEADER ~~~~~~
	~~~~~~~~~~~~~~~~~~~~~*/
  #logo {
		width: 220px;
	  }

		.ulg-brand-bar {
			background: #0F172A;
		}

    .ulg-brand-bar .dropdown-item { color: black !important; }

	.ulg-brand-logo-img {
		width: 200px;
    height: auto;
    background: white;
    padding: 5px 7px;
    border-radius: 5px;
	}

		.ulg-brand-bar a {
			text-decoration: none;
      font-family: var(--bs-body-font-family) !important;
		}

		.ulg-brand-bar a:hover {
			text-decoration: underline;
		}

		.brandbar-nav a::after {
		  content: "|";
		  color: white;
		  /*margin-left: 10px; Adjusts space between text and pipe */
      padding: 0 5px;
		}

		.brandbar-nav a:last-child::after {
		  content: "";
		  color: white;

		}

		.ulg-brand-bar .dropdown {
			background: white;
			border-radius: 8px;
			padding: 0 7px;
		}

	.ulg-dropdown-logo {
		max-height: 24px;
		width: auto;
		display: inline-block;
	}

	@media (max-width: 767px) {
		.ulg-brand-logo {
			display: none;
		}
	}

		.ulg-brand-bar .dropdown-toggle::after {
			color: black !important;
		}

		#ulgDropdown {
			padding: 2px !important;
			margin-bottom: 0 !important;

		}

	/*~~~~~~~~~~~~~~~~~~~~~
	~~~~~~ NAVIGATION ~~~~~
	~~~~~~~~~~~~~~~~~~~~~*/


	/*~~~~~~~~~~~~~~~~~~~~~
	~~~~~~~~ FOOTER ~~~~~~~
	~~~~~~~~~~~~~~~~~~~~~*/


  #block-7 img, #block-13 img {
		width: 200px;
	}

  .ulg-logo-slider .logo-slide {
    margin: 0 1rem;
  }
/* ... */

